Finished work on startup project

--- a/src/Sc2GamesLogger/App.config
+++ b/src/Sc2GamesLogger/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <appSettings>
+        <add key="UpdatePeriod" value="20" />
+        <add key="Timeout" value="10" />
+    </appSettings>
 </configuration>
